# easyjson

./: CMakeLists.txt  CMakePresets.json
include/: core.h  interface.h  lexer.h  parser.h
src/: core.c  interface.c  lexer.c  main.c  parser.c
